--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,15 @@
   "require": {
     "php": ">=5.5.9",
     "laravel/framework": "5.1.*",
-    "league/glide": "^0.3.5"
+    "league/glide": "^0.3.5",
+    "phpspec/phpspec": "~2.1",
+    "maatwebsite/excel": "~2.0.0",
+    "artisaninweb/laravel-soap": "0.2.*"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
     "mockery/mockery": "0.9.*",
-    "phpunit/phpunit": "~4.0",
-    "phpspec/phpspec": "~2.1",
-    "maatwebsite/excel": "~2.0.0",
-    "artisaninweb/laravel-soap": "0.2.*"
+    "phpunit/phpunit": "~4.0"
   },
   "autoload": {
     "classmap": [
