--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     "php": ">=5.5.9",
     "laravel/framework": "5.2.*",
     "artisaninweb/laravel-soap": "0.2.*",
-    "maatwebsite/excel": "~2.0"
+    "maatwebsite/excel": "~2.0",
+    "sammyk/laravel-facebook-sdk": "^3.0"
+
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
