--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,5 @@ MAIL_ENCRYPTION=null
 
 FACEBOOK_APP_ID=your_app_id
 FACEBOOK_APP_SECRET=your_app_secret
+
+FACULTY=คณะเทคโนโลยีสารสนเทศและการสื่อสาร
