--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,4 @@ FACEBOOK_APP_ID=your_app_id
 FACEBOOK_APP_SECRET=your_app_secret
 
 FACULTY=คณะเทคโนโลยีสารสนเทศและการสื่อสาร
+FB_GROUP_URL=https://www.facebook.com/groups/371288036329445/
