--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,4 @@ FACEBOOK_APP_SECRET=your_app_secret
 
 FACULTY=คณะเทคโนโลยีสารสนเทศและการสื่อสาร
 FB_GROUP_URL=https://www.facebook.com/groups/371288036329445/
+TOP_NAV_COLOR=#8B1C62
